--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -24,10 +24,12 @@
         </activity>
         <activity android:name="cat.jordihernandez.aclimb.vies" />
         <activity android:name="cat.jordihernandez.aclimb.escoles" />
+        <activity android:name="cat.jordihernandez.aclimb.sectors" />
         <activity android:name="cat.jordihernandez.aclimb.formulariVies" />
         <activity android:name="cat.jordihernandez.aclimb.formulariEditarVies" />
         <activity android:name="cat.jordihernandez.aclimb.formulariEscoles" />
         <activity android:name="cat.jordihernandez.aclimb.formulariEditarEscoles" />
+        <activity android:name="cat.jordihernandez.aclimb.formulariSectors" />
     
     </application>
 
